[package]
name = "beefy-gadget"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
fnv = "1.0.6"
futures = "0.3"
hex = "0.4"
log = "0.4"
parking_lot = "0.12"
thiserror = "1.0"
wasm-timer = "0.2.5"

codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/compound-finance/substrate", branch = "gateway" }

sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-application-crypto = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-arithmetic = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-utils = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-keystore = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network-gossip = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

beefy-primitives = { path = "../beefy-primitives" }

[dev-dependencies]
sc-network-test = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

beefy-test = { path = "../beefy-test" }
