[package]
name = "beefy-test"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

sc-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

substrate-test-runtime-client = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-test-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

beefy-gadget = { path = "../beefy-gadget" }
beefy-primitives = { path = "../beefy-primitives" }

async-trait = { version = "0.1" }
futures = { version = "0.3" }
futures-core = { version = "0.3" }
log = { version = "0.4" }
parking_lot = { version = "0.12" }
rand = { version = "0.8" }
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1.10", features = ["full"] }

[dev-dependencies]
sp-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
