[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

[dependencies]
jsonrpc-core = "18.0.0"
structopt = "0.3.25"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
frame-benchmarking-cli = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-transaction-payment-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

sc-basic-authorship = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-cli = { git = "https://github.com/compound-finance/substrate", features = ["wasmtime"], branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus-aura = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-executor = { git = "https://github.com/compound-finance/substrate", features = ["wasmtime"], branch = "gateway" }
sc-finality-grandpa = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-rpc-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-service = { git = "https://github.com/compound-finance/substrate", features = ["wasmtime"], branch = "gateway" }
sc-telemetry = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-transaction-pool = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-transaction-pool-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus-aura = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-finality-grandpa = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-timestamp = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

substrate-frame-rpc-system = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

[features]
default = []
runtime-benchmarks = []
