[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node-runtime"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0" }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dependencies]
hex-literal = { optional = true, version = "0.3" }
serde = { features = ["derive"], optional = true, version = "1.0.143" }

# local dependencies
beefy-primitives = { path = "../../beefy-primitives", default-features = false }
pallet-beefy = { path = "../../beefy-pallet", default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/compound-finance/substrate", default-features = false, optional = true, branch = "gateway" }
frame-executive = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-support = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-system = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-system-benchmarking = { git = "https://github.com/compound-finance/substrate", default-features = false, optional = true, branch = "gateway" }
frame-system-rpc-runtime-api = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-aura = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-balances = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-grandpa = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-mmr = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-randomness-collective-flip = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-sudo = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-timestamp = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-transaction-payment = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-consensus-aura = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-offchain = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-session = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-std = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-transaction-pool = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-version = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"beefy-primitives/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-beefy/std",
	"pallet-grandpa/std",
	"pallet-mmr/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
